# raytracer

./: .gitignore  CMakeLists.txt  run.sh
apps/: raytracer.cpp
include/color/: color.hpp
include/ray/: ray.hpp
include/sphere/: sphere.hpp
include/vec3/: vec3.hpp
src/: color.cpp  main.cpp  sphere.cpp
